--- a/app/views/lists/_list.html.erb
+++ b/app/views/lists/_list.html.erb
@@ -20,5 +20,5 @@
 			<%= link_to 'view topics', list_topics_path(list) %>
 		</span>
 	</p>
-	<p><%=h list.description %></p>
+	<p><%= list.description %></p>
 <% end %>
