--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -11,8 +11,8 @@
   	<% end %>
 <% end %>
 </p>
-<h2><%=h @list.name %> - <%=h @list.email %></h2>
-<p><%=h @list.description %></p>
+<h2><%= @list.name %> - <%= @list.email %></h2>
+<p><%= @list.description %></p>
 
 <table class="subscribers-topics">
 	<tr>
