--- a/app/views/servers/show.html.erb
+++ b/app/views/servers/show.html.erb
@@ -1,21 +1,21 @@
 <p>
   <b>Name:</b>
-  <%=h @server.name %>
+  <%= @server.name %>
 </p>
 
 <p>
   <b>IP:</b>
-  <%=h @server.ip %>
+  <%= @server.ip %>
 </p>
 
 <p>
   <b>Hostname:</b>
-  <%=h @server.hostname %>
+  <%= @server.hostname %>
 </p>
 
 <p>
   <b>Key:</b>
-  <%=h @server.key %>
+  <%= @server.key %>
 </p>
 
 <%= link_to 'Edit', edit_server_path(@server) %> |
