--- a/app/views/subscribers/_subscriber.html.erb
+++ b/app/views/subscribers/_subscriber.html.erb
@@ -4,7 +4,7 @@
 			<%= link_to h(subscriber.name), edit_subscriber_path(subscriber) %>
 		</span><br />
 		<span class="email">
-			<%=h subscriber.email %>
+			<%= subscriber.email %>
 		</span>
 	</td>
 	<td>
