--- a/app/views/subscribers/show.html.erb
+++ b/app/views/subscribers/show.html.erb
@@ -1,11 +1,11 @@
 <p>
   <b>Name:</b>
-  <%=h @subscriber.name %>
+  <%= @subscriber.name %>
 </p>
 
 <p>
   <b>Email:</b>
-  <%=h @subscriber.email %>
+  <%= @subscriber.email %>
 </p>
 
 <%= link_to 'Edit', edit_subscriber_path(@subscriber) %> |
