--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,4 +1,4 @@
-<h2>Topics for <%=h @list.name %> (<%= @list.email %>)</h2>
+<h2>Topics for <%= @list.name %> (<%= @list.email %>)</h2>
 
 <%= will_paginate @topics %>
 <table width="90%">
