--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,4 +1,4 @@
-<h3><%=h @topic.name %></h3>
+<h3><%= @topic.name %></h3>
 <p><%= link_to "[all topics]", list_topics_path(@list) %></p>
 <%= will_paginate @messages %>
 <%= render :partial => @messages %>
