--- a/app/views/subscribers/edit.html.erb
+++ b/app/views/subscribers/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>Edit <%= admin? ? @subscriber.name : 'your information' %></h2>
 
-<% form_for(@subscriber) do |f| %>
+<%= form_for(@subscriber) do |f| %>
   <%= f.error_messages %>
 	<%= render :partial => 'form', :locals => { :f => f } %>
 
