--- a/app/views/subscriptions/_form.html.erb
+++ b/app/views/subscriptions/_form.html.erb
@@ -1,4 +1,4 @@
-<% form_for @subscription do |f| %>
+<%= form_for @subscription do |f| %>
 	<%= f.hidden_field :list_id, :value => @list.id %>
 	<%= f.select :subscriber_id, @available_subscribers.map {|s| [s.name, s.id] }, :include_blank => "Add a subscriber..." %>
 	<%= f.submit "Add" %>
