--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,7 +1,14 @@
 <p class="top-right-links"><%= link_to 'Add a new list', new_list_path if admin? %></p>
 <% if admin? %>
 	<h2>Mailing Lists</h2>
-	<%= "<p>There are no lists yet. " + link_to ('Create one now', new_list_path) + "</p>" if @lists.empty? %>
+
+	<% if @lists.empty? %>
+	  <p>
+	    There are no lists yet.
+	    <%= link_to 'Create one now', new_list_path %>
+	  </p>
+	<% end %>
+
 <% else %>
 	<% if current_user.lists.empty? %>
 		<h3>You are not subscribed to any lists. <%= link_to "View all available lists", available_lists_path %></h3>
