--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -5,7 +5,8 @@
 
 <p>
   <%= f.label :short_name, 'Email Address' %><br />
-  <%= f.text_field :short_name %>&nbsp;@<%= ENV['email_domain'] %>
+  <%= f.text_field :short_name %>
+  @<%= ENV['email_domain'] %>
 </p>
 
 <p>
