--- a/app/views/subscribers/new.html.erb
+++ b/app/views/subscribers/new.html.erb
@@ -1,8 +1,8 @@
 <h1>New subscriber</h1>
 
-<%= form_for(@subscriber) do |f| %>
-	<%= f.error_messages %>
-	<%= render :partial => 'form', :locals => { :f => f } %>
+<%= form_for @subscriber do |f| %>
+  <%= f.error_messages %>
+  <%= render :partial => 'form', :locals => { :f => f } %>
 
   <p>
     <%= f.submit "Create" %>
@@ -10,5 +10,3 @@
 <% end %>
 
 <%= link_to 'Back', subscribers_path %>
-
-<%= focus_field :subscriber_name %>
