We don't care about a server's IP address or hostname -- they just need to provide their key in the URL params when POSTing a message

--- a/app/views/servers/edit.html.erb
+++ b/app/views/servers/edit.html.erb
@@ -10,4 +10,5 @@
   	</p>
 <% end %>
 
-<%= link_to 'Back', servers_path %>
+<%= link_to 'Back', servers_path %> |
+<%= link_to 'Delete', @server, :method => :delete, :confirm => "Are you sure?" %>
