Use uppercase ENV vars

--- a/app/views/lists/_form.html.haml
+++ b/app/views/lists/_form.html.haml
@@ -1,5 +1,5 @@
 = bs_text_field(f, :name, "Name", required: true)
-= bs_text_field(f, :short_name, "Email Address", required: true, hint: "@ #{ENV['email_domain']}")
+= bs_text_field(f, :short_name, "Email Address", required: true, hint: "@ #{ENV['EMAIL_DOMAIN']}")
 = bs_text_field(f, :description, "Description")
 
 = bs_check_box_block do
