Cleanup list edit form

--- a/app/views/lists/_form.html.haml
+++ b/app/views/lists/_form.html.haml
@@ -4,3 +4,22 @@
 
 = bs_check_box_block do
   = bs_check_box(f, :private, "Make this list private (invitation only)")
+
+- if @list.persisted?
+  = bs_text_field(f, :subject_prefix, "Subject prefix")
+  = bs_check_box_block do
+    = bs_check_box(f, :archive_disabled, "Disable the ability to view the message archive", disabled: true)
+    = bs_check_box(f, :disabled, "Disable this list.  This will prevent any new topics from being created, all messages will bounce back to the sender.", disabled: true)
+
+  %h4 Who receives replies to messages?
+
+  = bs_radio_button_block do
+    = bs_radio_button(f, :send_replies_to, "Everyone in the group", "Subscribers")
+    = bs_radio_button(f, :send_replies_to, "Only the author of the message", "Author")
+
+  %h4 Who is permitted to post new topics?
+
+  = bs_radio_button_block do
+    = bs_radio_button(f, :permitted_to_post, "Only Managers", "Managers", disabled: true)
+    = bs_radio_button(f, :permitted_to_post, "All Subscribers", "Subscribers", disabled: true)
+    = bs_radio_button(f, :permitted_to_post, "Anyone", "Anyone", disabled: true)
