Improved login page, fix logout

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,7 +29,7 @@
               %li
                 = link_to current_user.name
               %li
-                = link_to "Logout"
+                = link_to "Logout", logout_path
 
 
       %div{style: "float:right"}
