--- a/app/views/subscribers/new.html.erb
+++ b/app/views/subscribers/new.html.erb
@@ -1,4 +1,6 @@
-<h1>New subscriber</h1>
+<% if logged_in? %>
+  <h1>New subscriber</h1>
+<% end %>
 
 <%= form_for @subscriber do |f| %>
   <%= f.error_messages %>
