People should be able to edit themselves and admins should be able to set other admins

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,7 +27,7 @@
                 = link_to "Servers", servers_path
             %ul.nav.secondary-nav
               %li
-                = link_to current_user.name
+                = link_to current_user.name, edit_subscriber_path(current_user)
               %li
                 = link_to "Logout", logout_path
 
