--- a/app/views/subscribers/_form.html.erb
+++ b/app/views/subscribers/_form.html.erb
@@ -13,3 +13,9 @@
 
 <%= bs_password_field(f, :password, "Password") %>
 <%= bs_password_field(f, :password_confirmation, "Confirm Password") %>
+
+<% if admin? %>
+  <%= bs_check_box_block do %>
+    <%= bs_check_box(f, :admin, "Make this subscriber an administrator") %>
+  <% end %>
+<% end %>
